objects/Academic_Support_Role__c.object
<CustomObject>
    <description>Used to relate contacts to academic support records

Changed Label from Academic Support Role to EDU Support Role on 5/4</description>
    <fields>
        <fullName>Academic_Support_Project_Class__c</fullName>
        <description>reflects the class value from the related academic support record</description>
        <formula>TEXT(Academic_Support__r.Class__c)</formula>
        <inlineHelpText>reflects the class value from the related academic support record</inlineHelpText>
        <label>Academic Support Project Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Support__c</fullName>
        <description>Used to create a master/detail relationship between the contact role and the academic support record

Changed Label from Academic Support to Edu Project on May 2016</description>
        <label>EDU Project</label>
        <referenceTo>Academic_Support_Project__c</referenceTo>
        <relationshipName>Academic_Support_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <description>reflects the location field from the account related to the specified contact</description>
        <formula>Contact__r.Account.Site</formula>
        <inlineHelpText>reflects the location field from the account related to the specified contact</inlineHelpText>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Returns the latin name of the account</description>
        <formula>IF( ISBLANK(Contact__r.Account.Account_Name_Latin__c),  Contact__r.Account.Name , Contact__r.Account.Account_Name_Latin__c)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a contact record (customer OR MathWorker</description>
        <inlineHelpText>Use to lookup a contact record (customer OR MathWorker</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Academic_Support_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Used to reflect the email address of the related contact</description>
        <formula>Contact__r.Email</formula>
        <inlineHelpText>Used to reflect the email address of the related contact</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>used to reflect the job title of the related contact</description>
        <formula>Contact__r.Title</formula>
        <inlineHelpText>used to reflect the job title of the related contact</inlineHelpText>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to denote if the contact is a primary contact</description>
        <inlineHelpText>Check to denote if the contact is the primary contact</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Used to identify the role a contact plays in relationship to the Academic Support Record</description>
        <inlineHelpText>Select the role this contact is in related to this particular record</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Sponsor</fullName>
                </value>
                <value>
                    <fullName>Technical Lead</fullName>
                </value>
                <value>
                    <fullName>Primary Faculty Advisor</fullName>
                </value>
                <value>
                    <fullName>Secondary Faculty Advisor</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Competition Organizer</fullName>
                </value>
                <value>
                    <fullName>Undergraduate Student</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Student</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Team Leader</fullName>
                </value>
                <value>
                    <fullName>Field Marketing</fullName>
                </value>
                <value>
                    <fullName>Technical Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Evangelist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>EDU Support Role</label>
    <nameField>
        <displayFormat>ASR-{0000000}</displayFormat>
        <label>Academic Support Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDU Support Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>